우리 이제 별점 평균만 내면 넷플본다

--- a/templates/freeboard/freeboard_detail.html
+++ b/templates/freeboard/freeboard_detail.html
@@ -22,7 +22,7 @@
 
         <hr>
 
-        <form method="post" action="{% url 'freeboard:board-like' %}">
+        <form method="post" action="{% url 'freeboard:freeboard-like' %}">
             {% csrf_token %}
             <input type="hidden" name="username" value="{{ request.user.username }}">
             <input type="hidden" name="freeboard" value="{{ freeboard.id }}" required>
