--- a/templates/review/review_form.html
+++ b/templates/review/review_form.html
@@ -9,8 +9,7 @@
               <div class="card-body" style="background-color: rgba(245, 245, 245, 0);">
                   <form method="post" action="{% url 'review:write' %}">
                       {% csrf_token %}
-                      {{form.as_p}}
-                      <!-- {% for field in form %} 
+                      {% for field in form %}
                         <div class="form-group">
                             {% if field.html_name != 'username' %}
                             <label for="{{ field.id_for_label }}">{{ field.label }}</label>
@@ -27,14 +26,29 @@
                                    name="{{ field.html_name }}"
                                    style="background-color: rgba(245, 245, 245, 0);"
                                    value="{% if field.html_name == 'username' %}{{ request.user.username }}{% else %}{{ field.value|default_if_none:'' }}{% endif %}">
-                            {% endif %}
+                            {% endif %}   
+                     
+                   
                             {% for error in field.errors %}
                                 <div class="invalid-feedback">{{ error }}</div>
                             {% endfor %}
-                            
                         </div>
                       {% endfor %}
- -->
+                      <form method="post" action="{% url 'review:review-like' %}">
+                        <div class="btn-group">
+                          <select class="form-control" name="like_point" required style="background-color: rgba(245, 245, 245, 0);">
+                              <option value="">별 개수</option>
+                              <option value="5" {% if point == 5 %}selected{% endif %}>★★★★★</option>
+                              <option value="4" {% if point == 4 %}selected{% endif %}>★★★★☆</option>
+                              <option value="3" {% if point == 3 %}selected{% endif %}>★★★☆☆</option>
+                              <option value="2" {% if point == 2 %}selected{% endif %}>★★☆☆☆</option>
+                              <option value="1" {% if point == 1 %}selected{% endif %}>★☆☆☆☆</option>
+                          </select>
+                          
+                        </div>
+                    </form>
+                    
+            
                       <input class="btn btn-block" style="background-color: rgba(245, 245, 245, 0.3);" type="submit" value="저장">
                   </form>
               </div>
